2008-07-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* tests/examples/Makefile.am:
	Fix build by adding necessary CFLAGS and LIBS.

2008-07-05  Filippo Argiolas <filippo dot argiolas at gmail dot com>
	* gst-libs/gst/gl/glshader.c,h:
	* gst-libs/gst/gl/glfilter.c:
	* gst/gl/gstgleffects.c:
	* gst/gl/gstglfilterexample.c:
	Use BaseTransform start and stop methods to initialize and cleanup
	needed GL resources (textures, fbo). Fixes crashes when going to NULL
	state.
	Check a shader object to be non-null before deleting it; the GLSL
	specification (and the ARB one too) say it's not necessary but NVIDIA
	doesn't care and sets INVALID_VALUE when trying to delete a 0 handle.

2008-07-02  Filippo Argiolas <filippo dot argiolas at gmail dot com>
	* gst-libs/gst/gl/glshader.c,h:
	Removed GstGLProgram and let each shader object have its own program
	object so that it's easy to manage them and apply them to multiple
	rendering passes (see SoC reports on gnome-soc-list for detailed info)
	* gst/gl/gstgleffects.c:
	* gst/gl/gstgleffectssources.h:
	* gst/gl/gstgleffectstextures.h:
	Added a first working version of GstGLEffects element, support for
	some nice effect (mainly distortion and color curve ones). Made some
	effort to support multiple subsequent rendering targets so that more
	effects could be chained. Many things to fix yet!
	* tests/examples/fxtest.c: Little gtk+ test app (the one I use for
	testing, edit caps in the source if you want to try it)

2008-06-07  Filippo Argiolas <filippo dot argiolas at gmail dot com>
	* gst-libs/gst/gl/glshader.c,h:
	* gst-libs/gst/gl/glprogram.h:
	* gst-libs/gst/gl/glextensions.c,h:
	Added loading scalar float uniforms (the only ones I need at the
	moment) support. Other minor changes.

2008-06-07  Filippo Argiolas <filippo dot argiolas at gmail dot com>
	* gst-libs/gst/gl/gstglshader.c:
	* gst-libs/gst/gl/gstglshader.h:
	* gst-libs/gst/gl/gstglprogram.h:
	Merged first work for Google Summer of Code 2008.