@@ -19,3 +19,4 @@ Ronald Bultje <rbultje@ronald.bitfreak.net>
 Julien MOUTTE <julien@moutte.net>
 Jan Schmidt <thaytan@mad.scientist.com>
 Arwed v. Merkatz <v.merkatz@gmx.net>
+Filippo Argiolas <filippo.argiolas@gmail.com>
