@@ -21,13 +21,18 @@
 #ifndef __GST_GL_EFFECTS_TEXTURES__
 #define __GST_GL_EFFECTS_TEXTURES__
 
+
+struct _GstGLEffectsTexture1D {
+  guint 	 width;
+  guint 	 height;
+  guint 	 bytes_per_pixel; /* 3:RGB */ 
+  guint8	 pixel_data[256 * 1 * 3 + 1];
+};
+
+typedef struct _GstGLEffectsTexture1D GstGLEffectsTexture1D;
+
 /* TEXTURE1D for the cross processing effect */
-static const struct {
-  unsigned int 	 width;
-  unsigned int 	 height;
-  unsigned int 	 bytes_per_pixel; /* 3:RGB, 4:RGBA */ 
-  unsigned char	 pixel_data[256 * 1 * 3 + 1];
-} cross_curve = {
+static const GstGLEffectsTexture1D cross_curve = {
   256, 1, 3,
   "\0\0\1\0\1\1\0\1\2\0\1\2\0\1\2\0\1\2\0\1\3\0\2\3\0\2\4\0\2\4\0\2\5\0\2\6"
   "\0\3\6\0\3\6\0\3\7\0\3\10\0\4\10\0\4\11\0\4\12\0\4\12\1\4\13\1\5\14\1\5\15"
@@ -63,12 +68,7 @@ static const struct {
 };
 
 /* TEXTURE1D for the heat signature effect */
-static const struct {
-  guint  	 width;
-  guint  	 height;
-  guint  	 bytes_per_pixel; /* 3:RGB, 4:RGBA */ 
-  guint8 	 pixel_data[256 * 1 * 3 + 1];
-} heat_curve = {
+static const GstGLEffectsTexture1D heat_curve = {
   256, 1, 3,
   "\0\0\0\0\0\0\0\1\0\0\1\0\0\1\1\0\2\1\0\2\1\1\2\1\1\2\2\1\2\2\1\3\2\1\3\3"
   "\1\3\3\1\4\3\1\4\4\1\5\4\1\5\5\2\5\6\2\6\6\2\6\7\2\6\7\2\7\7\2\7\11\2\10"
@@ -98,6 +98,40 @@ static const struct {
   "_\0\357[\0\357W\0\357S\0\360O\0\360O\0\361K\0\361C\0\362@\0\363<\0\3638\0"
   "\3648\0\3641\0\365.\0\366+\0\366'\0\367'\0\370!\0\370\36\0\370\33\0\371\30"
   "\0\371\26\0\373\26\0\373\23\0\374\15\0\374\13\0\375\10\0\375\5\0\376\3\0",
+};
+
+static const GstGLEffectsTexture1D sepia_curve = {
+  256, 1, 3,
+  "\0\0\0\0\0\0\1\2\1\2\3\2\3\3\3\4\5\3\6\6\5\7\6\5\7\7\6\12\10\7\12\12\7\13"
+  "\12\10\15\13\11\15\14\12\16\14\13\21\16\14\21\17\14\21\20\16\23\21\16\24"
+  "\21\20\27\22\21\27\24\21\27\25\22\30\27\22\33\27\24\34\30\25\35\30\25\36"
+  "\32\26\37\33\27\37\34\30\40\35\30!\36\31#\36\32%!\33%\"\34&#\35'#\36($\36"
+  "*%\40*'\40+'\",'\".($.)$0,%1,&2.'3.'4/(51)61*82,94,:4-;5.<6/=70>82@92A:2"
+  "C;3C=5E=5F>6G?8J@8JB9LB:LC;ME<NF<OG=RH>SI?TJ@UKAVLAWMBXNEZOE]PF]SG^SG`TH"
+  "`VIaVJbWJdXKfYLhZMi[Ni]Nj^Ok_Pl`RmaSpcSqcTrdUsfVtgVuhWvhXwiYxjYzlZ{l[|m]"
+  "~n^\177p_\200q_\201r`\202sa\204tc\205uc\206vd\207wf\210xf\211zg\212{h\213"
+  "|i\214}j\216~k\217\177l\220\200m\221\201n\222\202p\223\204q\224\205r\225"
+  "\206s\226\207t\230\210u\231\211v\232\212w\233\213x\234\214z\235\216{\236"
+  "\217|\240\217}\241\220~\242\221\177\243\222\200\244\223\201\245\224\202\246"
+  "\225\204\247\226\205\251\230\206\252\231\207\253\232\211\253\233\211\254"
+  "\234\213\255\235\214\256\236\216\257\240\217\261\241\220\262\242\221\263"
+  "\243\222\264\244\223\265\245\224\266\246\225\266\247\226\267\247\230\267"
+  "\252\231\272\253\232\273\253\233\273\254\234\275\255\236\276\256\240\277"
+  "\256\241\277\261\242\300\262\243\301\263\244\303\264\245\304\265\246\305"
+  "\265\247\306\267\251\306\270\252\307\272\253\310\273\254\311\274\256\311"
+  "\275\257\313\276\261\315\277\262\315\277\263\316\300\263\317\303\265\317"
+  "\304\265\321\304\267\322\305\270\322\305\270\323\307\273\324\310\275\325"
+  "\310\276\325\312\277\326\313\300\326\315\300\331\316\303\331\317\304\332"
+  "\320\305\334\321\306\334\321\307\334\323\311\336\324\312\337\325\312\340"
+  "\326\315\340\330\316\341\331\317\342\332\320\343\332\320\343\333\322\344"
+  "\334\324\346\335\325\347\336\326\350\337\330\351\340\331\351\340\332\352"
+  "\341\333\353\343\334\353\344\335\354\346\335\355\347\340\355\350\341\357"
+  "\351\342\360\352\343\360\353\344\361\354\346\361\355\346\363\356\350\363"
+  "\356\350\363\357\353\364\360\353\366\361\355\366\361\356\367\362\357\367"
+  "\364\360\370\365\361\371\366\361\371\367\364\372\367\364\372\370\366\372"
+  "\371\367\373\372\370\373\372\370\374\372\371\374\373\371\375\374\373\375"
+  "\374\373\375\374\374\375\375\374\376\375\375\376\375\375\376\376\375\376"
+  "\376\376\377\376\376\377\377\377\377\377\377",
 };
 
 #if 0
